manifest/jenkins/master-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-dpl
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        runAsUser: 0
      serviceAccountName: "jenkins-service-account"
      containers:
        - name: jenkins
          image: "jenkins/jenkins:lts"
          imagePullPolicy: "Always"
          args: [ "--httpPort=8080"]
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 40001
              name: slavelistener
          livenessProbe:
            httpGet:
              path: "/login"
              port: http
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: "/login"
              port: http
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 10
          resources:
            limits:
              cpu: 400m
              memory: 2048Mi
            requests:
              cpu: 200m
              memory: 1024Mi
          volumeMounts:
            - mountPath: /var/jenkins_home
              name: jenkins-home
              readOnly: false
            - mountPath: /var/jenkins_home/jcasc
              name: jcasc-config
            - mountPath: /usr/share/jenkins/ref/plugins/
              name: plugin-dir
              readOnly: false
      volumes:
      - name: plugins
        emptyDir: {}
      - name: plugin-dir
        emptyDir: {}
      - name: plugins-config
        configMap:
          name: plugins-config
      - name: jcasc-config
        configMap:
          name: jcasc-config
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-pvc
