manifest/jenkins/master-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-master-svc
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
