manifest/jenkins/slave-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-slave-svc
spec:
  ports:
    - port: 40001
      targetPort: 40001
      name: slavelistener
  type: ClusterIP
