manifest/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: jenkins
  name: jekins-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.global-static-ip-name: nginx-ingress
spec:
  ingressClassName: ingress-gateway
  rules:
    - host: jenkins.pepago.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-master-svc
                port:
                  number: 8080
